[gd_scene load_steps=19 format=3 uid="uid://jrn2op0nlblo"]

[ext_resource type="PackedScene" uid="uid://dv5mrjfpaqac1" path="res://components/level/level.tscn" id="1_m7o4y"]
[ext_resource type="Script" path="res://scenes/levels/level3/level3.gd" id="2_wyux7"]
[ext_resource type="Texture2D" uid="uid://dvjf00v1gkpil" path="res://resources/textures/background/fase3.png" id="3_slgd0"]
[ext_resource type="PackedScene" uid="uid://cf83rm74m3jjs" path="res://components/teleporter/teleporter.tscn" id="4_2i5fa"]
[ext_resource type="Resource" uid="uid://dknxwjwfunxbp" path="res://resources/npc_data/librarian.tres" id="5_7fcx0"]
[ext_resource type="Resource" uid="uid://x4ajglshtnit" path="res://resources/npc_data/teacher.tres" id="5_84rfa"]
[ext_resource type="Script" path="res://components/level2/teacher.gd" id="6_tg1s0"]
[ext_resource type="Texture2D" uid="uid://dgrhc24lu6wjb" path="res://resources/textures/fase3/book_0.png" id="7_ay21h"]
[ext_resource type="Texture2D" uid="uid://bsiaa5lyjslfx" path="res://resources/textures/fase3/book_1.png" id="8_ptpym"]
[ext_resource type="Texture2D" uid="uid://irta0wiavj4f" path="res://resources/textures/fase3/book_2.png" id="9_8w0db"]
[ext_resource type="PackedScene" uid="uid://btqnvl5nlhs0h" path="res://components/item/item.tscn" id="10_chwks"]
[ext_resource type="Texture2D" uid="uid://cxu334jp4v5ux" path="res://resources/textures/fase3/book_3.png" id="10_qd6v2"]
[ext_resource type="Texture2D" uid="uid://cy35eidrbjqe5" path="res://resources/textures/fase3/book_4.png" id="11_lwen1"]
[ext_resource type="PackedScene" uid="uid://dltbps00erdkm" path="res://components/npc/npc.tscn" id="12_7adj2"]
[ext_resource type="Texture2D" uid="uid://b7f5rt8lt8fns" path="res://resources/textures/fase3/book_5.png" id="12_n2muh"]
[ext_resource type="PackedScene" uid="uid://dmvjfeujhikbr" path="res://scenes/levels/level3/computers.tscn" id="16_kysrv"]
[ext_resource type="PackedScene" uid="uid://dfar48g46gl8d" path="res://components/button/button.tscn" id="17_kqpyk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxgvm"]
size = Vector2(16, 4)

[node name="Level" instance=ExtResource("1_m7o4y")]
script = ExtResource("2_wyux7")

[node name="Camera" parent="." index="0"]
limit_left = -48
limit_right = 544

[node name="TileMap" parent="." index="1"]
layer_0/tile_data = PackedInt32Array(851968, 327681, 2, 851969, 327681, 2, 851970, 327681, 2, 851971, 327681, 2, 851972, 327681, 2, 851973, 327681, 2, 851974, 327681, 2, 851975, 327681, 2, 851976, 327681, 2, 851977, 327681, 2, 851978, 327681, 2, 851979, 327681, 2, 851980, 327681, 2, 851981, 327681, 2, 851982, 327681, 2, 851983, 327681, 2, 851984, 327681, 2, 851985, 327681, 2, 851986, 327681, 2, 851987, 327681, 2, 851988, 327681, 2, 851989, 327681, 2, 917504, 65537, 0, 917505, 65537, 0, 917506, 65537, 0, 917507, 65537, 0, 917508, 65537, 0, 917509, 65537, 0, 917510, 65537, 0, 917522, 65537, 0, 917523, 65537, 0, 917524, 65537, 0, 917525, 65537, 0, 589824, 65537, 0, 589825, 65537, 0, 589826, 65537, 0, 589827, 65537, 0, 589828, 65537, 0, 589829, 65537, 0, 589830, 65537, 0, 589831, 65537, 0, 589832, 65537, 0, 589833, 65537, 0, 589834, 65537, 0, 589835, 65537, 0, 589836, 65537, 0, 589837, 65537, 0, 589838, 65537, 0, 589839, 65537, 0, 589840, 65537, 0, 589841, 65537, 0, 589842, 65537, 0, 589843, 65537, 0, 589844, 65537, 0, 589845, 65537, 0, 524288, 327681, 2, 524289, 327681, 2, 524290, 327681, 2, 524291, 327681, 2, 524292, 327681, 2, 524293, 327681, 2, 524294, 327681, 2, 524295, 327681, 2, 524296, 327681, 2, 524297, 327681, 2, 524298, 327681, 2, 524299, 327681, 2, 524300, 327681, 2, 524301, 327681, 2, 524302, 327681, 2, 524303, 327681, 2, 524304, 327681, 2, 524305, 327681, 2, 524306, 327681, 2, 524307, 327681, 2, 524308, 327681, 2, 524309, 327681, 2, 262145, 65537, 0, 262146, 65537, 0, 262144, 65537, 0, 262147, 65537, 0, 262148, 65537, 0, 262149, 65537, 0, 262150, 65537, 0, 262151, 65537, 0, 262152, 65537, 0, 262153, 65537, 0, 262154, 65537, 0, 262155, 65537, 0, 262156, 65537, 0, 262157, 65537, 0, 262158, 65537, 0, 262159, 65537, 0, 262160, 65537, 0, 262161, 65537, 0, 262162, 65537, 0, 262163, 65537, 0, 262164, 65537, 0, 262165, 65537, 0, 196608, 327681, 2, 196609, 327681, 2, 196610, 327681, 2, 196611, 327681, 2, 196612, 327681, 2, 196613, 327681, 2, 196614, 327681, 2, 196615, 327681, 2, 196616, 327681, 2, 196617, 327681, 2, 196618, 327681, 2, 196619, 327681, 2, 196620, 327681, 2, 196621, 327681, 2, 196622, 327681, 2, 196623, 327681, 2, 196624, 327681, 2, 196625, 327681, 2, 196626, 327681, 2, 196627, 327681, 2, 196628, 327681, 2, 196629, 327681, 2, 917511, 65537, 0, 917512, 65537, 0, 917513, 65537, 0, 917514, 65537, 0, 917515, 65537, 0, 917516, 65537, 0, 917517, 65537, 0, 917518, 65537, 0, 917519, 65537, 0, 917520, 65537, 0, 917521, 65537, 0, 1179648, 327681, 2, 1245184, 65537, 0, 1179649, 327681, 2, 1245185, 65537, 0, 1179650, 327681, 2, 1245186, 65537, 0, 1179651, 327681, 2, 1245187, 65537, 0, 1179652, 327681, 2, 1245188, 65537, 0, 1179653, 327681, 2, 1245189, 65537, 0, 1179654, 327681, 2, 1245190, 65537, 0, 1179655, 327681, 2, 1245191, 65537, 0, 1179656, 327681, 2, 1245192, 65537, 0, 1179657, 327681, 2, 1245193, 65537, 0, 1179658, 327681, 2, 1245194, 65537, 0, 1179659, 327681, 2, 1245195, 65537, 0, 1179660, 327681, 2, 1245196, 65537, 0, 1179661, 327681, 2, 1245197, 65537, 0, 1179662, 327681, 2, 1245198, 65537, 0, 1179663, 327681, 2, 1245199, 65537, 0, 1179664, 327681, 2, 1245200, 65537, 0, 1179665, 327681, 2, 1245201, 65537, 0, 1179666, 327681, 2, 1245202, 65537, 0, 1179667, 327681, 2, 1245203, 131073, 0, 1179668, 327681, 2, 1245204, 65537, 0, 1179669, 327681, 2, 1245205, 65537, 0, 65534, 1, 65537, 131070, 1, 65537, 196606, 1, 65537, 262142, 1, 65537, 327678, 1, 65537, 393214, 1, 65537, 458750, 1, 65537, 524286, 1, 65537, 589822, 1, 65537, 655358, 1, 65537, 720894, 1, 65537, 786430, 1, 65537, 851966, 1, 65537, 917502, 1, 65537, 983038, 1, 65537, 1048574, 1, 65537, 1114110, 1, 65537, 1179646, 1, 65537, 1245182, 1, 65537, 1310718, 1, 65537, 1376254, 1, 65537, 1441790, 1, 65537, 1507326, 1, 65537, 1507327, 1, 1, 1441791, 1, 1, 1376255, 1, 1, 1310719, 1, 1, 1245183, 1, 1, 1179647, 1, 1, 1114111, 1, 1, 1048575, 1, 1, 983039, 1, 1, 917503, 1, 1, 851967, 1, 1, 786431, 1, 1, 720895, 1, 1, 655359, 1, 1, 589823, 1, 1, 524287, 1, 1, 458751, 1, 1, 393215, 1, 1, 327679, 1, 1, 262143, 1, 1, 196607, 1, 1, 131071, 1, 1, 65535, 1, 1, -65536, 196609, 1, -65535, 196609, 1, -65534, 196609, 1, -65533, 196609, 1, -65532, 196609, 1, -65531, 196609, 1, -65530, 196609, 1, -65529, 196609, 1, -65528, 196609, 1, -65527, 196609, 1, -65526, 196609, 1, -65525, 196609, 1, -65524, 196609, 1, -65523, 196609, 1, -65522, 196609, 1, -65521, 196609, 1, -65520, 196609, 1, -65519, 196609, 1, -65518, 196609, 1, -65517, 196609, 1, -65516, 196609, 1, -65515, 196609, 1, -2, 1, 65537, -1, 196609, 1, -196610, 131073, 0, -131074, 131073, 0, -65538, 1, 65537, -196609, 131073, 0, -131073, 131073, 0, -65537, 196609, 1, -262144, 131073, 0, -196608, 131073, 0, -131072, 196609, 1, -262143, 131073, 0, -196607, 131073, 0, -131071, 196609, 1, -262142, 131073, 0, -196606, 131073, 0, -131070, 196609, 1, -262141, 131073, 0, -196605, 131073, 0, -131069, 196609, 1, -262140, 131073, 0, -196604, 131073, 0, -131068, 196609, 1, -262139, 131073, 0, -196603, 131073, 0, -131067, 196609, 1, -262138, 131073, 0, -196602, 131073, 0, -131066, 196609, 1, -262137, 131073, 0, -196601, 131073, 0, -131065, 196609, 1, -262136, 131073, 0, -196600, 131073, 0, -131064, 196609, 1, -262135, 131073, 0, -196599, 131073, 0, -131063, 196609, 1, -262134, 131073, 0, -196598, 131073, 0, -131062, 196609, 1, -262133, 131073, 0, -196597, 131073, 0, -131061, 196609, 1, -262132, 131073, 0, -196596, 131073, 0, -131060, 196609, 1, -262131, 131073, 0, -196595, 131073, 0, -131059, 196609, 1, -262130, 131073, 0, -196594, 131073, 0, -131058, 196609, 1, -262129, 131073, 0, -196593, 131073, 0, -131057, 196609, 1, -262128, 131073, 0, -196592, 131073, 0, -131056, 196609, 1, -262127, 131073, 0, -196591, 131073, 0, -131055, 196609, 1, -262126, 131073, 0, -196590, 131073, 0, -131054, 196609, 1, -262125, 131073, 0, -196589, 131073, 0, -131053, 196609, 1, -262124, 131073, 0, -196588, 131073, 0, -131052, 196609, 1, -262123, 131073, 0, -196587, 131073, 0, -131051, 196609, 1, -262122, 131073, 0, -196586, 131073, 0, -131050, 196609, 1, -262121, 131073, 0, -196585, 131073, 0, -131049, 196609, 1, -262120, 131073, 0, -196584, 131073, 0, -131048, 196609, 1, -262119, 131073, 0, -196583, 131073, 0, -131047, 196609, 1, -262118, 131073, 0, -196582, 131073, 0, -131046, 196609, 1, 1572862, 1, 65537, 1572863, 1, 1, 1507328, 327681, 2, 1507329, 327681, 2, 1507330, 327681, 2, 1507331, 327681, 2, 1507332, 327681, 2, 1507333, 327681, 2, 1507334, 327681, 2, 1507335, 327681, 2, 1507336, 327681, 2, 1507337, 327681, 2, 1507338, 327681, 2, 1507339, 327681, 2, 1507340, 327681, 2, 1507341, 327681, 2, 1507342, 327681, 2, 1507343, 327681, 2, 1507344, 327681, 2, 1507345, 327681, 2, 1507346, 327681, 2, 1507347, 327681, 2, 1507348, 327681, 2, 1507349, 327681, 2, 1572864, 65537, 0, 1572865, 65537, 0, 1572866, 65537, 0, 1572867, 65537, 0, 1572868, 65537, 0, 1572869, 65537, 0, 1572870, 65537, 0, 1572871, 65537, 0, 1572872, 65537, 0, 1572873, 65537, 0, 1572874, 65537, 0, 1572875, 65537, 0, 1572876, 65537, 0, 1572877, 65537, 0, 1572878, 65537, 0, 1572879, 65537, 0, 1572880, 65537, 0, 1572881, 65537, 0, 1572882, 65537, 0, 1572883, 65537, 0, 1572884, 65537, 0, 1572885, 65537, 0, 1638399, 1, 1, 1703935, 1, 1, 1769471, 1, 1, 1835007, 1, 1, 1900543, 131073, 0, 1966079, 131073, 0, 1638398, 1, 65537, 1703934, 1, 65537, 1769470, 1, 65537, 1835006, 1, 65537, 1900542, 131073, 0, 1966078, 131073, 0, -65509, 196609, 1, 196635, 196609, 0, 262171, 65537, 0, 524315, 196609, 0, 589851, 65537, 0, 851995, 196609, 0, 917531, 65537, 0, 1179675, 196609, 0, 1245211, 65537, 0, 1507355, 196609, 0, 1572891, 65537, 0, -65508, 196609, 1, 196636, 196609, 0, 262172, 65537, 0, 524316, 196609, 0, 589852, 65537, 0, 851996, 196609, 0, 917532, 65537, 0, 1179676, 196609, 0, 1245212, 65537, 0, 1507356, 196609, 0, 1572892, 65537, 0, -65507, 196609, 1, 196637, 196609, 0, 262173, 65537, 0, 524317, 196609, 0, 589853, 65537, 0, 851997, 196609, 0, 917533, 65537, 0, 1179677, 196609, 0, 1245213, 65537, 0, 1507357, 196609, 0, 1572893, 65537, 0, 1507350, 327681, 2, 1572886, 65537, 0, 1507351, 327681, 2, 1572887, 65537, 0, 1507352, 327681, 2, 1572888, 65537, 0, 1507353, 327681, 2, 1572889, 65537, 0, 1507354, 327681, 2, 1572890, 65537, 0, 1179670, 327681, 2, 1245206, 65537, 0, 1179671, 327681, 2, 1245207, 65537, 0, 1179672, 327681, 2, 1245208, 65537, 0, 1179673, 327681, 2, 1245209, 65537, 0, 1179674, 327681, 2, 1245210, 65537, 0, 851990, 327681, 2, 917526, 65537, 0, 851991, 327681, 2, 917527, 65537, 0, 851992, 327681, 2, 917528, 65537, 0, 851993, 327681, 2, 917529, 65537, 0, 851994, 327681, 2, 917530, 65537, 0, 524310, 327681, 2, 589846, 65537, 0, 524311, 327681, 2, 589847, 65537, 0, 524312, 327681, 2, 589848, 65537, 0, 524313, 327681, 2, 589849, 65537, 0, 524314, 327681, 2, 589850, 65537, 0, 196630, 327681, 2, 262166, 65537, 0, 196631, 327681, 2, 262167, 65537, 0, 196632, 327681, 2, 262168, 65537, 0, 196633, 327681, 2, 262169, 65537, 0, 196634, 327681, 2, 262170, 65537, 0, 1835008, 327681, 2, 1900544, 131073, 0, 1835009, 327681, 2, 1900545, 131073, 0, 1835010, 327681, 2, 1900546, 131073, 0, 1835011, 327681, 2, 1900547, 131073, 0, 1835012, 327681, 2, 1900548, 131073, 0, 1835013, 327681, 2, 1900549, 131073, 0, 1835014, 327681, 2, 1900550, 131073, 0, 1835015, 327681, 2, 1900551, 131073, 0, 1835016, 327681, 2, 1900552, 131073, 0, 1835017, 327681, 2, 1900553, 131073, 0, 1835018, 327681, 2, 1900554, 131073, 0, 1835019, 327681, 2, 1900555, 131073, 0, 1835020, 327681, 2, 1900556, 131073, 0, 1835021, 327681, 2, 1900557, 131073, 0, 1835022, 327681, 2, 1900558, 131073, 0, 1835023, 327681, 2, 1900559, 131073, 0, 1835024, 327681, 2, 1900560, 131073, 0, 1835025, 327681, 2, 1900561, 131073, 0, 1835026, 327681, 2, 1900562, 131073, 0, 1835027, 327681, 2, 1900563, 131073, 0, 1835028, 327681, 2, 1900564, 131073, 0, 1835029, 327681, 2, 1900565, 131073, 0, 1835030, 327681, 2, 1900566, 131073, 0, 1835031, 327681, 2, 1900567, 131073, 0, 1835032, 327681, 2, 1900568, 131073, 0, 1835033, 327681, 2, 1900569, 131073, 0, 1835034, 327681, 2, 1900570, 131073, 0, 1835035, 196609, 0, 1900571, 131073, 0, 1835036, 196609, 0, 1900572, 131073, 0, 1835037, 196609, 0, 1900573, 131073, 0, -65514, 196609, 1, -65513, 196609, 1, -65512, 196609, 1, -65511, 196609, 1, -65510, 196609, 1, -131045, 196609, 1, -131044, 196609, 1, -131043, 196609, 1, 2031614, 131073, 0, 2097150, 131073, 0, 2162686, 131073, 0, 2228222, 131073, 0, 2031615, 131073, 0, 2097151, 131073, 0, 2162687, 131073, 0, 2228223, 131073, 0, 1966080, 131073, 0, 2031616, 131073, 0, 2097152, 131073, 0, 2162688, 131073, 0, 1966081, 131073, 0, 2031617, 131073, 0, 2097153, 131073, 0, 2162689, 131073, 0, 1966082, 131073, 0, 2031618, 131073, 0, 2097154, 131073, 0, 2162690, 131073, 0, 1966083, 131073, 0, 2031619, 131073, 0, 2097155, 131073, 0, 2162691, 131073, 0, 1966084, 131073, 0, 2031620, 131073, 0, 2097156, 131073, 0, 2162692, 131073, 0, 1966085, 131073, 0, 2031621, 131073, 0, 2097157, 131073, 0, 2162693, 131073, 0, 1966086, 131073, 0, 2031622, 131073, 0, 2097158, 131073, 0, 2162694, 131073, 0, 1966087, 131073, 0, 2031623, 131073, 0, 2097159, 131073, 0, 2162695, 131073, 0, 1966088, 131073, 0, 2031624, 131073, 0, 2097160, 131073, 0, 2162696, 131073, 0, 1966089, 131073, 0, 2031625, 131073, 0, 2097161, 131073, 0, 2162697, 131073, 0, 1966090, 131073, 0, 2031626, 131073, 0, 2097162, 131073, 0, 2162698, 131073, 0, 1966091, 131073, 0, 2031627, 131073, 0, 2097163, 131073, 0, 2162699, 131073, 0, 1966092, 131073, 0, 2031628, 131073, 0, 2097164, 131073, 0, 2162700, 131073, 0, 1966093, 131073, 0, 2031629, 131073, 0, 2097165, 131073, 0, 2162701, 131073, 0, 1966094, 131073, 0, 2031630, 131073, 0, 2097166, 131073, 0, 2162702, 131073, 0, 1966095, 131073, 0, 2031631, 131073, 0, 2097167, 131073, 0, 2162703, 131073, 0, 1966096, 131073, 0, 2031632, 131073, 0, 2097168, 131073, 0, 2162704, 131073, 0, 1966097, 131073, 0, 2031633, 131073, 0, 2097169, 131073, 0, 2162705, 131073, 0, 1966098, 131073, 0, 2031634, 131073, 0, 2097170, 131073, 0, 2162706, 131073, 0, 1966099, 131073, 0, 2031635, 131073, 0, 2097171, 131073, 0, 2162707, 131073, 0, 1966100, 131073, 0, 2031636, 131073, 0, 2097172, 131073, 0, 2162708, 131073, 0, 1966101, 131073, 0, 2031637, 131073, 0, 2097173, 131073, 0, 2162709, 131073, 0, 1966102, 131073, 0, 2031638, 131073, 0, 2097174, 131073, 0, 2162710, 131073, 0, 1966103, 131073, 0, 2031639, 131073, 0, 2097175, 131073, 0, 2162711, 131073, 0, 1966104, 131073, 0, 2031640, 131073, 0, 2097176, 131073, 0, 2162712, 131073, 0, 1966105, 131073, 0, 2031641, 131073, 0, 2097177, 131073, 0, 2162713, 131073, 0, 1966106, 131073, 0, 2031642, 131073, 0, 2097178, 131073, 0, 2162714, 131073, 0, 1966107, 131073, 0, 2031643, 131073, 0, 2097179, 131073, 0, 2162715, 131073, 0, 1966108, 131073, 0, 2031644, 131073, 0, 2097180, 131073, 0, 2162716, 131073, 0, 1966109, 131073, 0, 2031645, 131073, 0, 2097181, 131073, 0, 2162717, 131073, 0, -131041, 196609, 1, -65505, 196609, 1, 31, 1, 65537, 65567, 1, 65537, 131103, 1, 65537, 196639, 1, 65537, 262175, 1, 65537, 327711, 1, 65537, 393247, 1, 65537, 458783, 1, 65537, 524319, 1, 65537, 589855, 1, 65537, 655391, 1, 65537, 720927, 1, 65537, 786463, 1, 65537, 851999, 1, 65537, 917535, 1, 65537, 983071, 1, 65537, 1048607, 1, 65537, 1114143, 1, 65537, 1179679, 1, 65537, 1245215, 1, 65537, 1310751, 1, 65537, 1376287, 1, 65537, 1441823, 1, 65537, 1507359, 1, 65537, 1572895, 1, 65537, 1638431, 1, 65537, 1703967, 1, 65537, 1769503, 1, 65537, 1835039, 131073, 0, 1900575, 131073, 0, 1966111, 131073, 0, 2031647, 131073, 0, 2097183, 131073, 0, 2162719, 131073, 0, -131040, 1, 1, -65504, 1, 1, 32, 1, 1, 65568, 1, 1, 131104, 1, 1, 196640, 1, 1, 262176, 1, 1, 327712, 1, 1, 393248, 1, 1, 458784, 1, 1, 524320, 1, 1, 589856, 1, 1, 655392, 1, 1, 720928, 1, 1, 786464, 1, 1, 852000, 1, 1, 917536, 1, 1, 983072, 1, 1, 1048608, 1, 1, 1114144, 1, 1, 1179680, 1, 1, 1245216, 1, 1, 1310752, 1, 1, 1376288, 1, 1, 1441824, 1, 1, 1507360, 1, 1, 1572896, 1, 1, 1638432, 1, 1, 1703968, 1, 1, 1769504, 1, 1, 1835040, 131073, 0, 1900576, 131073, 0, 1966112, 131073, 0, 2031648, 131073, 0, 2097184, 131073, 0, 2162720, 131073, 0, -131042, 196609, 1, -65506, 196609, 1, 196638, 196609, 0, 262174, 65537, 0, 524318, 196609, 0, 589854, 65537, 0, 851998, 196609, 0, 917534, 65537, 0, 1179678, 196609, 0, 1245214, 65537, 0, 1507358, 196609, 0, 1572894, 65537, 0, 1835038, 196609, 0, 1900574, 131073, 0, 1966110, 131073, 0, 2031646, 131073, 0, 2097182, 131073, 0, 2162718, 131073, 0, 1835041, 196609, 0, 1835042, 196609, 0, 1835043, 196609, 0, 1835044, 196609, 0, 1835045, 196609, 0, 1835046, 196609, 0, 1835047, 196609, 0, 1900577, 131073, 0, 1966113, 131073, 0, 2031649, 131073, 0, 2097185, 131073, 0, 2162721, 131073, 0, 1900578, 131073, 0, 1966114, 131073, 0, 2031650, 131073, 0, 2097186, 131073, 0, 2162722, 131073, 0, 1900579, 131073, 0, 1966115, 131073, 0, 2031651, 131073, 0, 2097187, 131073, 0, 2162723, 131073, 0, 1900580, 131073, 0, 1966116, 131073, 0, 2031652, 131073, 0, 2097188, 131073, 0, 2162724, 131073, 0, 1900581, 131073, 0, 1966117, 131073, 0, 2031653, 131073, 0, 2097189, 131073, 0, 2162725, 131073, 0, 1900582, 131073, 0, 1966118, 131073, 0, 2031654, 131073, 0, 2097190, 131073, 0, 2162726, 131073, 0, 1900583, 131073, 0, 1966119, 131073, 0, 2031655, 131073, 0, 2097191, 131073, 0, 2162727, 131073, 0, 1900536, 196609, 0, 1900537, 196609, 0, 1900538, 196609, 0, 1900539, 196609, 0, 1900540, 196609, 0, 1900541, 196609, 0, 2031609, 131073, 0, 1966073, 131073, 0, 1966072, 131073, 0, 2031608, 131073, 0, 2097144, 131073, 0, 2162680, 131073, 0, 2228216, 131073, 0, 2228217, 131073, 0, 2162681, 131073, 0, 2097145, 131073, 0, 2097146, 131073, 0, 2031610, 131073, 0, 1966074, 131073, 0, 1966075, 131073, 0, 2031611, 131073, 0, 2097147, 131073, 0, 2162683, 131073, 0, 2162682, 131073, 0, 2228218, 131073, 0, 2228219, 131073, 0, 2228220, 131073, 0, 2162684, 131073, 0, 2097148, 131073, 0, 2031612, 131073, 0, 1966076, 131073, 0, 1966077, 131073, 0, 2031613, 131073, 0, 2097149, 131073, 0, 2162685, 131073, 0, 2228221, 131073, 0, 1310739, 131073, 1, 655379, 131073, 1, 983059, 131073, 1, 327699, 131073, 1, 983063, 131073, 1, -196581, 131073, 0, -196580, 131073, 0, -196579, 131073, 0, -196578, 131073, 0, -196577, 131073, 0, -196576, 131073, 0, -262112, 131073, 0, -262113, 131073, 0, -262114, 131073, 0, -262115, 131073, 0, -262116, 131073, 0, -262117, 131073, 0, -327682, 131073, 0, -262146, 131073, 0, -327681, 131073, 0, -262145, 131073, 0, -393216, 131073, 0, -327680, 131073, 0, -393215, 131073, 0, -327679, 131073, 0, -393214, 131073, 0, -327678, 131073, 0, -393213, 131073, 0, -327677, 131073, 0, -393212, 131073, 0, -327676, 131073, 0, -393211, 131073, 0, -327675, 131073, 0, -393210, 131073, 0, -327674, 131073, 0, -393209, 131073, 0, -327673, 131073, 0, -393208, 131073, 0, -327672, 131073, 0, -393207, 131073, 0, -327671, 131073, 0, -393206, 131073, 0, -327670, 131073, 0, -393205, 131073, 0, -327669, 131073, 0, -393204, 131073, 0, -327668, 131073, 0, -393203, 131073, 0, -327667, 131073, 0, -393202, 131073, 0, -327666, 131073, 0, -393201, 131073, 0, -327665, 131073, 0, -393200, 131073, 0, -327664, 131073, 0, -393199, 131073, 0, -327663, 131073, 0, -393198, 131073, 0, -327662, 131073, 0, -393197, 131073, 0, -327661, 131073, 0, -393196, 131073, 0, -327660, 131073, 0, -393195, 131073, 0, -327659, 131073, 0, -393194, 131073, 0, -327658, 131073, 0, -393193, 131073, 0, -327657, 131073, 0, -393192, 131073, 0, -327656, 131073, 0, -393191, 131073, 0, -327655, 131073, 0, -393190, 131073, 0, -327654, 131073, 0, -393189, 131073, 0, -327653, 131073, 0, -393188, 131073, 0, -327652, 131073, 0, -393187, 131073, 0, -327651, 131073, 0, -393186, 131073, 0, -327650, 131073, 0, -393185, 131073, 0, -327649, 131073, 0, -393184, 131073, 0, -327648, 131073, 0)

[node name="FirstBackground" parent="FirstBackground" index="0"]
texture = ExtResource("3_slgd0")

[node name="FirstUp" parent="Entities" index="0" node_paths=PackedStringArray("target") instance=ExtResource("4_2i5fa")]
position = Vector2(433, 448)
target = NodePath("../SecondUp")
multiple = true

[node name="Collision" type="CollisionShape2D" parent="Entities/FirstUp" index="1"]
position = Vector2(7, -2)
shape = SubResource("RectangleShape2D_qxgvm")

[node name="FirstDown" type="Marker2D" parent="Entities" index="1"]
position = Vector2(472, 447)

[node name="SecondUp" parent="Entities" index="2" node_paths=PackedStringArray("target") instance=ExtResource("4_2i5fa")]
position = Vector2(433, 368)
target = NodePath("../ThirdUp")
multiple = true

[node name="Collision" type="CollisionShape2D" parent="Entities/SecondUp" index="1"]
position = Vector2(7, -2)
shape = SubResource("RectangleShape2D_qxgvm")

[node name="SecondDown" parent="Entities" index="3" node_paths=PackedStringArray("target") instance=ExtResource("4_2i5fa")]
position = Vector2(465, 368)
target = NodePath("../FirstDown")
multiple = true

[node name="Collision" type="CollisionShape2D" parent="Entities/SecondDown" index="1"]
position = Vector2(7, -2)
shape = SubResource("RectangleShape2D_qxgvm")

[node name="ThirdUp" parent="Entities" index="4" node_paths=PackedStringArray("target") instance=ExtResource("4_2i5fa")]
position = Vector2(433, 288)
target = NodePath("../FourthUp")
multiple = true

[node name="Collision" type="CollisionShape2D" parent="Entities/ThirdUp" index="1"]
position = Vector2(7, -2)
shape = SubResource("RectangleShape2D_qxgvm")

[node name="ThirdDown" parent="Entities" index="5" node_paths=PackedStringArray("target") instance=ExtResource("4_2i5fa")]
position = Vector2(465, 288)
target = NodePath("../SecondDown")
multiple = true

[node name="Collision" type="CollisionShape2D" parent="Entities/ThirdDown" index="1"]
position = Vector2(7, -2)
shape = SubResource("RectangleShape2D_qxgvm")

[node name="FourthUp" parent="Entities" index="6" node_paths=PackedStringArray("target") instance=ExtResource("4_2i5fa")]
position = Vector2(433, 208)
target = NodePath("../FiftyUp")
multiple = true

[node name="Collision" type="CollisionShape2D" parent="Entities/FourthUp" index="1"]
position = Vector2(7, -2)
shape = SubResource("RectangleShape2D_qxgvm")

[node name="FourthDown" parent="Entities" index="7" node_paths=PackedStringArray("target") instance=ExtResource("4_2i5fa")]
position = Vector2(465, 208)
target = NodePath("../ThirdDown")
multiple = true

[node name="Collision" type="CollisionShape2D" parent="Entities/FourthDown" index="1"]
position = Vector2(7, -2)
shape = SubResource("RectangleShape2D_qxgvm")

[node name="FiftyUp" parent="Entities" index="8" node_paths=PackedStringArray("target") instance=ExtResource("4_2i5fa")]
position = Vector2(433, 128)
target = NodePath("../SixtyUp")
multiple = true

[node name="Collision" type="CollisionShape2D" parent="Entities/FiftyUp" index="1"]
position = Vector2(7, -2)
shape = SubResource("RectangleShape2D_qxgvm")

[node name="FiftyDown" parent="Entities" index="9" node_paths=PackedStringArray("target") instance=ExtResource("4_2i5fa")]
position = Vector2(465, 128)
target = NodePath("../FourthDown")
multiple = true

[node name="Collision" type="CollisionShape2D" parent="Entities/FiftyDown" index="1"]
position = Vector2(7, -2)
shape = SubResource("RectangleShape2D_qxgvm")

[node name="SixtyUp" type="Marker2D" parent="Entities" index="10"]
position = Vector2(440, 47)

[node name="SixtyDown" parent="Entities" index="11" node_paths=PackedStringArray("target") instance=ExtResource("4_2i5fa")]
position = Vector2(465, 48)
target = NodePath("../FiftyDown")
multiple = true

[node name="Collision" type="CollisionShape2D" parent="Entities/SixtyDown" index="1"]
position = Vector2(7, -2)
shape = SubResource("RectangleShape2D_qxgvm")

[node name="Librarian" parent="Entities" index="12" instance=ExtResource("12_7adj2")]
position = Vector2(344, 273)
script = ExtResource("6_tg1s0")
data = ExtResource("5_7fcx0")
flip = false

[node name="Teacher" parent="Entities" index="13" instance=ExtResource("12_7adj2")]
position = Vector2(216, 36)
script = ExtResource("6_tg1s0")
data = ExtResource("5_84rfa")
flip = false

[node name="Book0" parent="Entities" index="14" instance=ExtResource("10_chwks")]
visible = false
position = Vector2(24, 258)
texture = ExtResource("7_ay21h")

[node name="Book1" parent="Entities" index="15" instance=ExtResource("10_chwks")]
visible = false
position = Vector2(60, 281)
texture = ExtResource("8_ptpym")

[node name="Book2" parent="Entities" index="16" instance=ExtResource("10_chwks")]
visible = false
position = Vector2(106, 265)
texture = ExtResource("9_8w0db")

[node name="Book3" parent="Entities" index="17" instance=ExtResource("10_chwks")]
visible = false
position = Vector2(171, 280)
texture = ExtResource("10_qd6v2")

[node name="Book4" parent="Entities" index="18" instance=ExtResource("10_chwks")]
visible = false
position = Vector2(229, 271)
texture = ExtResource("11_lwen1")

[node name="Book5" parent="Entities" index="19" instance=ExtResource("10_chwks")]
visible = false
position = Vector2(196, 259)
texture = ExtResource("12_n2muh")

[node name="Computers" parent="Entities" index="20" instance=ExtResource("16_kysrv")]
position = Vector2(154, 356)

[node name="LevelButton" parent="Entities" index="21" instance=ExtResource("17_kqpyk")]
position = Vector2(346, 343)

[node name="SpawnPoint" parent="." index="5"]
position = Vector2(41, 442)
